--- a/app/scripts/templates/graph.ejs
+++ b/app/scripts/templates/graph.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="bower_components/nvd3/nv.d3.css">
+<link rel="stylesheet" href="styles/nv.d3.css">
 <div class="graph-canvas">
 </div>
 <div class="graph-button">
